using new button

--- a/firefox/popup.html
+++ b/firefox/popup.html
@@ -24,6 +24,7 @@
 </head>
 <body>
   <button id="fetchButton">Fetch Data</button>
+  <button id="copyTranscriptButton">📋 Copy Transcript</button>
   <div id="result"></div>
   <script src="popup.js"></script>
 </body>
