--- a/firefox/popup.html
+++ b/firefox/popup.html
@@ -108,7 +108,7 @@
     
     .disk-bar-fill {
       height: 100%;
-      background: linear-gradient(90deg, #4CAF50, #FFC107, #FF5722);
+      background: #00BCD4;
       transition: width 0.3s ease;
       border-radius: 10px;
     }
